[package]
name = "rust-test-node"
version = "0.1.0"
edition = "2021"

[dependencies]
libp2p = { version = "0.56", features = [
    "tokio",
    "tcp",
    "noise",
    "yamux",
    "gossipsub",
    "identify",
    "macros",
    "quic",
    "secp256k1",
    "metrics"
] }
libp2p-gossipsub = { version = "0.49", features = ["metrics"] }
tokio = { version = "1.40", features = ["full"] }
futures = "0.3"
chrono = "0.4"
byteorder = "1.5"
rand = "0.9.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
warp = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3"
sha2 = "0.10"
lazy_static = "1.5"
gethostname = "1.1.0"
prometheus-client = "0.23"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
